<resources>
    <string name="app_name">GazteluBiraActivity</string>
    <string name="gazteluBira">Gaztelu Bira</string>
    <string name="league">League</string>
    <string name="btnMatches">Matches</string>
    <string name="btnPlayers">Players</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="title_activity_players">PlayersActivity</string>
    <string name="logOut">Log out</string>

    <!--    Log in Activity    -->
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogIn">Log in</string>
    <string name="tvLogInApp">Log In to</string>
    <string name="tvApp">App</string>
    <string name="signUpFail">Please insert all the fields</string>
    <string name="errorSignUp">Error when signing up</string>
    <string name="userNotRegistered">User hasn\'t been registered. You probably need an @</string>
    <string name="userNotLoggedIn">User couldn\'t log in</string>
    <string name="signUpConnectionFail">Couldn\'t sign up</string>
    <string name="errorLogIn">Error when logging in</string>
    <string name="logInFail">Email or password not correct</string>
    <string name="logInConnectionFail">Couldn\'t log in</string>
    <string name="errorRegister">You can\'t register</string>
    <string name="noUsersToLink">All players have already been registered</string>
    <string name="btnGuest">Join as a guest</string>
    <string name="tvGuest">Guest</string>
    <string name="guestMessage">You will join the app as a guest</string>
    <string name="notAbleToVote">If you click "Accept", you will not be able to vote</string>
    <string name="tvSelectYourName">Select your name</string>
    <string name="mvpVoteFail">MVP vote failed</string>
    <string name="mvpVoteFailDescription">Couldn\'t submit MVP vote to the final votation</string>


    <!--    Players Activity    -->
    <!--    Main strings    -->
    <string name="tvNumberOfGoals">Goals</string>
    <string name="tvNumberOfAssits">Assists</string>
    <string name="tvNumberOfMatches">Matches</string>
    <string name="tvSortBy">Sort by</string>

    <string name="ivLogoDescription">Gaztelu Bira Logo</string>
    <string name="titlePlayers">Players stats</string>
    <string name="tvPlayerName">Player name</string>
    <string name="tvPosition">Position</string>
    <string name="addNewPlayer">Add new player</string>
    <string name="tvProportionMatchesGoals">Goals %</string>
    <string name="etInsertName">Insert player name</string>
    <string name="tvNewPlayer">New player</string>
    <string name="tvDefaultInsert">0</string>
    <string name="btnAddPlayer">Add player</string>
    <string name="errorGettingPoints">Error getting points</string>
    <string name="prefsFile">com.example.gaztelubiraactivity.PREFERENCE_FILE_KEY</string>

    <!--    Image descriptions    -->
    <string name="descriptionGazteluBiraLogo">Gaztelu Bira Logo</string>
    <string name="descriptionFootballBall">Football ball image</string>
    <string name="descriptionAssistIcon">Assist icon image</string>
    <string name="descriptionGamesIcon">Games icon image</string>
    <string name="descriptionMinusIcon">Minus icon image</string>
    <string name="descriptionPlusIcon">Plus icon image</string>
    <string name="descriptionMatchesStatsGoals">Football ball image</string>
    <string name="descriptionMatchesStatsAssits">Football shoe image</string>
    <string name="descriptionMatchesStatsPlayers">Group of players image</string>
    <string name="descriptionLogoLocal">Local logo</string>
    <string name="descriptionLogoVisitor">Visitor logo</string>

    <!--    Warnings    -->
    <string name="warning">Warning</string>
    <string name="warningEmptyName">Name can\'t be empty</string>
    <string name="warningIncorrectParameters">The number of games must be greater than 0 if the number of goals or assists is greater than 0</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>


    <!--    MATCHES ACTIVITY    -->
    <string name="tvGamesTitle">Matches played</string>
    <string name="tvMatchesWin">Matches won</string>
    <string name="tvMatchesDraw">Tied matches</string>
    <string name="tvMatchesLost">Lost matches</string>
    <string name="dash">-</string>
    <string name="MVP">MVP</string>
    <string name="voteMVP">Vote your MVP</string>
    <string name="descriptionMVP">MVP icon image</string>
    <string name="selectMVP">Select your MVP</string>
    <string name="sendMVP">Send MVP</string>
    <string name="MVPVotes">MVP Votes</string>
    <string name="tvMVPVotesForTheMoment">MVP votes for the moment</string>
    <string name="btnClose">Close</string>


<!--    SupaBase Strings    -->
    <string name="conexionErrorTitle">Conexion error</string>
    <string name="conexionErrorMessage">There was an error connecting to the database</string>
</resources>