<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".LogInActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tvLogInApp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/gazteluBira"
        android:textAllCaps="true"
        android:textColor="@color/fabRed"
        android:textSize="35sp"
        tools:ignore="VisualLintBounds,TextSizeCheck" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/key"
        android:drawablePadding="16dp"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnRegister"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@color/tvGamesGreen"
            android:text="@string/btnRegister"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnLogIn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/dark_gray"
            android:text="@string/btnLogIn"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGuest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@color/mainBackground"
        android:text="@string/btnGuest"
        android:textColor="@color/white" />

</LinearLayout>