<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/stats_dialog_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tvSortBy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <View
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="4dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_dialog"
        android:paddingHorizontal="16dp"
        android:layout_gravity="center"
        android:showDividers="middle"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/rbGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:padding="16dp"
            android:text="@string/tvNumberOfGoals"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbAssists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:padding="16dp"
            android:text="@string/tvNumberOfAssists"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbGamesPlayed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:padding="16dp"
            android:text="@string/tvNumberOfMatches"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbProportion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:padding="16dp"
            android:text="@string/tvProportionMatchesGoals"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbMVP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:padding="16dp"
            android:text="@string/MVP"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>
</LinearLayout>